# VehicleSimulation

./: README.md
ground_car/: CMakeLists.txt
ground_car/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh  gazebo_ros_block_laser.cpp
ground_car/urdf/: prius.urdf
ground_world/: CMakeLists.txt  package.xml
ground_world/launch/: demo.launch
ground_world/models/: zhuangtong1.stl
ground_world/rviz/: demo.rviz
ground_world/worlds/: empty.world  example.world  example1.world  example3.world
my_car_cmd_pub/: CMakeLists.txt  package.xml
my_car_cmd_pub/src/: LQRFollowing.hh  my_car_cmd_pub.cpp
